--- a/第一篇.md
+++ b/第一篇.md
@@ -1,1 +1,11 @@
-哈哈哈哈哈
+---
+title: 文章标题
+date: 2024-12-23
+---
+
+作者：快乐猪猪侠
+链接：https://zhuanlan.zhihu.com/p/1986119725240034386
+来源：知乎
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+
+大部分迫友想必在家里或多或少都会受到一下情绪上的压抑，这个压抑就体现在压根不会向父母表露出自己的真实情感，不管是喜怒哀乐，都是自己一个人在消化，后来就慢慢就养成了自己消化情绪的习惯。这种情况形成的因素基本上是在很小的时候没有正确的情绪引导，当你还处于最幼小的时候，遇到一些难以接受的事情，会本能的向最亲近的人哭闹发泄情绪，但由于我们的传统观念所限一直认为哭闹是懦弱的体现所以相当一部分家长的回应几乎就是被呵斥不许哭。在这种回应模式下，我们便开启了压抑情绪的大门，当我们第一次试着努力让我们的情绪得到平复得到了父母的肯定并嘉奖为＂听话＂的好孩子后，我们便逐渐对上帝赋予的＂大我＂产生了怀疑，不认为自己在脱离＂小我＂控制和压抑的情况下自己会过得很好。于是从情绪开始我们越来越更多的仰仗＂小我＂控制和压抑，造物主赋予我们的那个＂大我＂在越来越多的问题上被忽略，很多时候压根不太相信自己不做些什么自己就能活的很好。随着个人的成长经历的事情越来越多，迫友们也逐渐从控制和压抑中得到了一些甜头并开始刻意的强化，逐渐觉得自己应该掌控的更多，于是任何一个方面都有可能成为迫友们掌控的对象，清洁，念头，思维，身体反应等等在这逐渐失控的控制感中变得愈发离谱。这种离谱的掌控感（亦或是压抑）会内化出一个极其变态的＂超我＂，在这个超我的带领下，＂本我＂在强大的超我面前被压抑的抬不起头，你的大脑被趋驱使着往更加极端的方向发展。于是迫友们变得越来越擅长解决和分析问题，把很多事情概念想的很深刻才会罢休。生活中对一些方面的事情越来越执着，随着这种情况发展越来越多的烦恼随之涌现，焦虑症开始体现出来，这个掌控感可能就会迁移在掌控情绪，迫友们不接受自己这么焦虑，自己一定要寻找一些解决的方法把自己的情绪解决掉，于是开始刻意压抑情绪，寻找一些＂方法＂去解决情绪，这就掉进了大脑的陷阱中，由焦虑症演变成强迫性焦虑障碍。所以在这个强大的超我的驱使下，本能的寻找解决办法，不少迫友找到博主，一直在问＂怎么办、怎么解决＂殊不知正式这个想法背后的驱动力是你强迫症的本身。在博主这里只会告诉你怎么不解决，不解决你会变得越来越好。博主这篇文章是为了让迫友更清楚的认识到自己面对的是什么，自己的思维局限性在哪里
